--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 <a href="#" class="btn-primary btn-contact">Contact</a>
                 <a href="#" class="mobile-menu"><i class="fa-solid fa-bars"></i></a>
             </nav>
+
+            <div class="notice">
+                <span>Notice:</span>
+                <marquee>The new order will stay effective from January 5 through February .
+                </marquee>
+            </div>
     
             <section id="hero">
                 <div class="hero-content">
